--- a/Facebook Messenger Export code.ipynb
+++ b/Facebook Messenger Export code.ipynb
@@ -2,13 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5c33c67",
+   "id": "14cda883",
    "metadata": {},
    "source": [
     "# This code allows you to convert the facebook messenger export from Json files to a csv which you can easily analyze with Python or your program of choice\n",
     "\n",
-    "## Note: this is an extended version of the code which Anubhav Pattnaik published in his article\n",
-    "https://towardsdatascience.com/download-and-analyse-your-facebook-messenger-data-6d1b49404e09"
+    "## Note: this is an extended version of the code which June Tao Ching published in his article\n",
+    "https://towardsdatascience.com/download-and-analyse-your-facebook-messenger-data-6d1b49404e09\n",
+    "\n",
+    "#### The original code allowed to extract the following data points from the facebook chat\n",
+    "- date\n",
+    "- sender\n",
+    "- content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa3a910",
+   "metadata": {},
+   "source": [
+    "#### This code has been extended to retreive the following data points from the facebook chat\n",
+    "- chat \n",
+    "- message_type\n",
+    "- status\n",
+    "- participants"
    ]
   },
   {
